<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_power"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bsd.com.fitnessapp.PowerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:text="@string/weights"
            android:id="@+id/textViewWeights"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:id="@+id/editTextWeights"
            android:textColor="@color/black"
            android:inputType="number"
            android:textSize="18sp"
            android:text=""
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:hint="@string/text_Kilogramms" />

        <TextView
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:text="@string/repeats"
            android:id="@+id/textViewRepeats"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:id="@+id/editTextRepeats"
            android:textColor="@color/black"
            android:inputType="number"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfirm"
            android:text="@string/confirm"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:onClick="onClick"/>
    </LinearLayout>


</RelativeLayout>
