<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_training"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bsd.com.fitnessapp.TrainingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:text="@string/training"
            android:id="@+id/textViewTraining"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinnerTraining"
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:text="@string/workout"
            android:id="@+id/textViewWorkout"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinnerWorkout"
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnStart"
            android:text="@string/start"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="95dp"
            android:onClick="onClick"/>
    </LinearLayout>



</RelativeLayout>
