<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bsd.com.fitnessapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <TextView
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:id="@+id/textViewUsername"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_below="@+id/textViewPassword"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:id="@+id/editTextUsername"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_below="@+id/editTextPassword"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:id="@+id/textViewPassword"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:id="@+id/editTextPassword"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_below="@+id/textViewPassword"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:onClick="onClick"/>

    </LinearLayout>


</RelativeLayout>
